--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
             </div>
         </div>
 
+        <div id="paginacao">
+            <button id="prevBtn">Anterior</button>
+            <span id="paginaAtual"></span>
+            <button id="nextBtn">Próxima</button>
+        </div>
+
+        <label for="itensPorPagina">Itens por página: </label>
+        <select id="itensPorPagina">
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+        </select>
         <!-- Tabela de Dados -->
         <table class="table table-bordered table-striped" id="table_data">
             <thead class="table-dark">
@@ -95,8 +108,6 @@
             });
         });
     </script>
-
-    
 </body>
 
 </html>
